# Logger

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  quickstart.cpp
include/blet/: logger.h
include/blet/logger/: format.h
single_include/: CMakeLists.txt  amalgamate_config.json
single_include/blet/: logger.h
single_include/test/: CMakeLists.txt  already_include.cpp  already_include.h  main.cpp
src/: logger.cpp
src/logger/: format.cpp
test/: CMakeLists.txt  mainLogger.cpp
